<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_eat_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cuongvo.mvp_example.view.component.ViewList
        android:id="@+id/fragment_eat_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>